correction contrast

--- a/css/index.scss
+++ b/css/index.scss
@@ -324,7 +324,7 @@ nav {
     position: relative;
     z-index: 3;
     color: $primary-color;
-    background-color: rgba(0, 0, 0, 0.1); 
+    background-color: rgba(0, 0, 0, 0.2); 
     margin-left: 12%;
     bottom: 92%;
      text-shadow:
